# advent_2024_embassy

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
day1/: Cargo.toml
day1/examples/: runner.rs
day1/src/: lib.rs
day10/: Cargo.toml
day10/examples/: runner.rs
day10/src/: lib.rs
day13/: Cargo.toml
day13/examples/: runner.rs
day13/src/: lib.rs
day16/: Cargo.toml
day16/examples/: runner.rs
day16/src/: lib.rs
day2/: Cargo.toml
day2/examples/: runner.rs
day2/src/: lib.rs
day3/: Cargo.toml
day3/examples/: runner.rs
day3/src/: lib.rs
day4/: Cargo.toml
day4/examples/: runner.rs
day4/src/: lib.rs
day5/: Cargo.toml
day5/examples/: runner.rs
day5/src/: lib.rs
day6/: Cargo.toml
day6/examples/: runner.rs
day6/src/: lib.rs
day7/: Cargo.toml
day7/examples/: runner.rs
day7/src/: lib.rs
day8/: Cargo.toml
day8/examples/: runner.rs
day8/src/: lib.rs
day9/: Cargo.toml
day9/examples/: runner.rs
day9/src/: lib.rs
embassy_runner/: Cargo.toml
embassy_runner/.cargo/: config.toml
embassy_runner/src/: main.rs
embassy_runner/src/aoc/: day1.rs  mod.rs  (+6 more)
local_runner/: Cargo.toml
local_runner/src/: main.rs
src/: fmt.rs  lib.rs  main.rs
src/aoc/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs  task.rs
src/server/: aoc.rs  mod.rs
src/wifi/: server.rs
template/: Cargo.toml
template/examples/: runner.rs
template/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs  region.rs  solution.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+18 files in other folders)
