[package]
edition = "2024"
name = "day10"
version = "0.1.0"

[dependencies]
log = "0.4.22"
utils = { path = "../utils" }
# Safe, fallible, embedded-friendly ordered set/map via a scapegoat tree. Validated against BTreeSet/BTree…
scapegoat = "2.3.0"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
anyhow = { version = "1.0" }
yansi = { version = "1.0.0-gamma" }
strum = { version = "0.26.3" }
strum_macros = { version = "0.26.3" }
